# wrl2xan

./: CMakeLists.txt  README  functions.cpp  functions.h  readlabel_test.cpp  scanwrl_test.cpp  strtok_test.cpp  wrl2xan_batch.cpp
m/: BodyHNP_inertia.m  BodyTorso_inertia.m  drawfoot.m
php_translator/: explode_function_test.php  huboplus.kinbody.xml  translator.php
